# visual-jax

./: .dockerignore  .gitignore  Agent.md  Dockerfile  Readme.md  docker-compose.yaml  docker-compose_dev.yaml  package-lock.json
backend/: Cargo.toml  Dockerfile
backend/.sqlx/: query-04960bf25b139fc2d4c0a32b0cf8b60ebcce6198bf1c04a4384d8bc49cba20d1.json  query-13becd5321eda4b316224ed849c7396cee4cc1909c1c31da08e9c22ef6bcce6b.json  query-16e84d577155f3c47fcb736bbad4dcaf05b21c79d47fe008e209191157f5697e.json  query-1f612b9033ba9ff47bcfe182f04c913a240359154f13cee1b2e93687b6dd497c.json  query-3562a951beeee04c8f859c617a83cfff376f5232c4cf62a8fd635b204f41e143.json  query-35fe204cb4e7b9bf37f0738aa3e9197ed8cf7bb3f3d5962636eb9eb4e94ed06f.json  query-5fa503b402479187d656c0cb8bb36380780c470bf7a4372364e731b7e3b800b4.json  query-73fbc1efe59bb8dec00d2940ae30c508e2613ac4d710b1739f69cda63699d65a.json  query-7edbc21795a86e019ad98e222c44e8ca20af00af47cc3e9778098c94267bae33.json  query-8f12d8276c4d9f633e39247185c1c44e562173f2c2ca870a64ea038c825863c7.json  query-8f3e1f99908e608c394989d58a6a1eda3615530b382a7a91347ec9ab3da2e888.json  query-93f682238b180ef7231997aa74c166ab9ef863486126573a64b3757e898778fd.json  query-95a730f57894595aedd3cf859a98d5f16599658c792a0991046e4bca6a23cbc8.json  query-991b3356309fb8113b21c2c0c1d86452947ff7239c76189a4ff032b9195fbaab.json  query-aa1082daeaeb2d21be25214e5e0a66acfcce4e8d077cf2373f0ab2d7d2cd0500.json  query-aa30ab39e829a143a3b67fad6e6e7ca4a9a57363c5aa750be67db9a01afbaf19.json  query-ccea8b612481b0f1d1af8b85156a29ae437027874a4c7ad6c5bd63ccae1f1dae.json  query-e09368cfdb836c38538afb15a2e9139283a0612c907145d49037c0254aa905db.json  query-fbb66beabc8f1fe8dba568de397caf238e4cab4383b0aa4f3e53f868c75b492d.json
backend/migrations/: 00007_nil_user.sql  0003_datasets.sql  0004_models.sql  0004_models_and_versioning.sql  0005_logs.sql  0006_alter_log_sever.sql
backend/src/: lib.rs  main.rs
backend/src/crud/: dataset.rs  logs.rs  mod.rs  models.rs  user.rs
backend/src/engine/: dataloader.rs  graph.rs  mod.rs  runner.rs  transpiler.rs  types.rs  validator.rs
backend/src/http/: dependencies.rs  error.rs  mod.rs  utils.rs
backend/src/schemas/: datasets.rs  graph.rs  logs.rs  mod.rs  models.rs  training.rs  users.rs
backend/static/: _not-found.html  dashboard.html  dashboard.txt  editor.html  login.html
backend/static/_not-found/: __next._full.txt  __next._head.txt  __next._not-found.__PAGE__.txt  __next._tree.txt
backend/static/dashboard/: __next._tree.txt  (+1 more)
backend/templates/: dataloader.py.j2  gru.py.j2  model.py.j2  training.py.j2
backend/tests/: integration_tests.rs
(+121 files in other folders)
