[package]
name = "rust_backend"
version = "0.1.0"
edition = "2024"
publish = false


[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.1", features = ["tower-log", "multipart"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "time",
    "macros",
] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
argon2 = "0.5"
tower = "0.5"
tower-http = { version = "0.6", features = ["full"] }
time = { version = "0.3.30", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4", "fast-rng", "v7"] }

# Utility Crates
anyhow = "1.0.48"
dotenv = "0.15.0"
env_logger = "0.10.0"
itertools = "0.12"
log = "0.4.14"
rand = "0.8.4"
thiserror = "1.0.30"
serde_json = "1.0.135"
digest = "0.10.7"
jsonwebtoken = "9.3.0"
mail-send = "0.5.0"
deadpool = { version = "0.12.1", features = ["rt_tokio_1"] }
tokio-rustls = "0.26.1"
http = "1.2.0"
schemars = "1.2.0"
petgraph = "0.8.3"
tera = "1.20.1"
bollard = "*"
